--- a/reports/report4/report4.html
+++ b/reports/report4/report4.html
@@ -637,7 +637,7 @@ cv2.imwrite("final.png", final_image)
 			experimentos e os resultados obtidos foram satisfatórios e serviu para compreender a importância das técnicas utilizadas para melhorar a
 			qualidade visual das imagens, já que o histograma é utilizado para fornecer as informações de  contraste,luminosidade e distribuição de 
 			intensidadades de uma imagem e a sua equalização é responsável por melhor o constrate e a homogeneidade da imagem,redistribuindo as intensidades em um intervalo maior, 
-			útil para imagens com baixo constrate e alta concentração de intensidades em um pequeno intervalo..</p>
+			útil para imagens com baixo constrate e alta concentração de intensidades em um pequeno intervalo.</p>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
 	<script>
