--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 			<a href=reports/report2/report2.html> Relatório Lab 2</a> <br>
 			<a href=reports/report3/report3.html> Relatório Lab 3</a> <br>
 			<a href=reports/report4/report4.html> Relatório Lab 4</a> <br>
+			<a href=reports/report5/report5.html> Relatório Lab 5</a> <br>
 
 
 
