--- a/reports/report5/report5.html
+++ b/reports/report5/report5.html
@@ -19,6 +19,13 @@
 		<p>Fernando Astolfo Dos Santos</p>
 		
 		<h2> 1.Introdução </h2>
+
+		<p>Neste relatório, descrevemos o laboratório da disciplina de Processamento de Vídeo, focado na técnica de Subtração de Fundo e Detecção de Movimento. Os estudantes estudaram a 
+			teoria por trás da Subtração de Fundo e realizaram dois exercícios práticos sobre Detecção de Movimento. Os programas "lab5a.py," "lab5b.py," e "lab5c.py," juntamente com o vídeo de 
+			teste "vtest.avi," foram utilizados para desenvolver experimentos que envolveram a leitura de vídeos pré-gravados e imagens da webcam. O objetivo foi realizar a detecção de 
+			movimento e rastreamento de objetos, aplicando os métodos aprendidos. Os resultados obtidos fornecem uma base sólida para a compreensão prática do processamento de vídeo, 
+			abrindo caminho para aplicações reais, por exemplo, em vigilância e rastreamento de objetos.</p>
+		
 		<h2> 2.Fundamentos Básicos</h2>
 
 		<h3>
