--- a/reports/report5/report5.html
+++ b/reports/report5/report5.html
@@ -20,11 +20,17 @@
 		
 		<h2> 1.Introdução </h2>
 
-		<p>Neste relatório, descrevemos o laboratório da disciplina de Processamento de Vídeo, focado na técnica de Subtração de Fundo e Detecção de Movimento. Os estudantes estudaram a 
-			teoria por trás da Subtração de Fundo e realizaram dois exercícios práticos sobre Detecção de Movimento. Os programas "lab5a.py," "lab5b.py," e "lab5c.py," juntamente com o vídeo de 
-			teste "vtest.avi," foram utilizados para desenvolver experimentos que envolveram a leitura de vídeos pré-gravados e imagens da webcam. O objetivo foi realizar a detecção de 
-			movimento e rastreamento de objetos, aplicando os métodos aprendidos. Os resultados obtidos fornecem uma base sólida para a compreensão prática do processamento de vídeo, 
-			abrindo caminho para aplicações reais, por exemplo, em vigilância e rastreamento de objetos.</p>
+		<p>Para um melhor entendimento da teoria por trás da Subtração de Fundo, os estudantes foram orientados a estudar o material presente no link "How to Use Background Subtraction 
+			Methods" [1], que abrange conceitos essenciais e algoritmos utilizados para a subtração de fundo em sequências de vídeo.</p>
+
+		<p>Além disso, foram disponibilizados dois exercícios para estudo relacionados à Detecção de Movimento: subtração frame-a-frame e subtração da referência. O primeiro exercício pode 
+			ser encontrado no link "MOTION DETECTION AND TRACKING USING OPENCV AND PYTHON" [2], e o segundo no link "Motion Detection OpenCV Python" [3]. Ambos os exercícios detalham os 
+			procedimentos para detectar e rastrear movimentos em sequências de vídeo usando a biblioteca OpenCV em conjunto com a linguagem de programação Python.</p>
+
+		<p>Neste relatório, os estudantes estudaram a teoria por trás da Subtração de Fundo e realizaram dois exercícios práticos sobre Detecção de Movimento. Os programas "lab5a.py," 
+			"lab5b.py," e "lab5c.py," juntamente com o vídeo de teste "vtest.avi," foram utilizados para desenvolver experimentos que envolveram a leitura de vídeos pré-gravados e 
+			imagens da webcam. O objetivo foi realizar a detecção de movimento e rastreamento de objetos, aplicando os métodos aprendidos. Os resultados obtidos fornecem uma base sólida 
+			para a compreensão prática do processamento de vídeo, abrindo caminho para aplicações reais, por exemplo, em vigilância e rastreamento de objetos.</p>
 		
 		<h2> 2.Fundamentos Básicos</h2>
 
