--- a/reports/report5/report5.html
+++ b/reports/report5/report5.html
@@ -21,10 +21,10 @@
 		<h2> 1.Introdução </h2>
 
 		<p>Para um melhor entendimento da teoria por trás da Subtração de Fundo, os estudantes foram orientados a estudar o material presente no link "How to Use Background Subtraction 
-			Methods" [1], que abrange conceitos essenciais e algoritmos utilizados para a subtração de fundo em sequências de vídeo.</p>
+			Methods", que abrange conceitos essenciais e algoritmos utilizados para a subtração de fundo em sequências de vídeo.</p>
 
 		<p>Além disso, foram disponibilizados dois exercícios para estudo relacionados à Detecção de Movimento: subtração frame-a-frame e subtração da referência. O primeiro exercício pode 
-			ser encontrado no link "MOTION DETECTION AND TRACKING USING OPENCV AND PYTHON" [2], e o segundo no link "Motion Detection OpenCV Python" [3]. Ambos os exercícios detalham os 
+			ser encontrado no link "MOTION DETECTION AND TRACKING USING OPENCV AND PYTHON", e o segundo no link "Motion Detection OpenCV Python". Ambos os exercícios detalham os 
 			procedimentos para detectar e rastrear movimentos em sequências de vídeo usando a biblioteca OpenCV em conjunto com a linguagem de programação Python.</p>
 
 		<p>Neste relatório, os estudantes estudaram a teoria por trás da Subtração de Fundo e realizaram dois exercícios práticos sobre Detecção de Movimento. Os programas "lab5a.py," 
@@ -33,6 +33,21 @@
 			para a compreensão prática do processamento de vídeo, abrindo caminho para aplicações reais, por exemplo, em vigilância e rastreamento de objetos.</p>
 		
 		<h2> 2.Fundamentos Básicos</h2>
+
+		<p>1. Subtração de Fundo: A Subtração de Fundo é uma técnica usada para extrair objetos em movimento de um vídeo, isolando-os do fundo estático. É amplamente empregada em sistemas de 
+			vigilância e rastreamento de objetos, permitindo a detecção de alterações significativas na cena.
+
+		<p>2. Detecção de Movimento: A Detecção de Movimento envolve a identificação e rastreamento de objetos em movimento dentro de uma sequência de vídeo. Essa técnica é utilizada em 
+			várias aplicações, como detecção de intrusos, monitoramento de tráfego e interação homem-máquina.</p>
+		
+		<p>3. Transformada de Fourier: A Transformada de Fourier é uma ferramenta matemática fundamental no Processamento de Vídeo. Ela permite decompor um sinal ou imagem em suas 
+			frequências constituintes, o que é útil para análise espectral e filtragem.</p>
+		
+		<p>4. Rastreamento de Objetos: O Rastreamento de Objetos consiste em acompanhar um objeto específico ao longo do tempo em uma sequência de vídeo. É uma tarefa desafiadora, pois 
+			envolve prever a posição do objeto em quadros subsequentes.</p>
+		
+		<p>7. Segmentação de Imagem: A Segmentação de Imagem é o processo de dividir uma imagem em regiões ou objetos distintos. Pode ser usada para extrair informações relevantes de uma 
+			imagem, como identificar contornos ou separar objetos de interesse do fundo.</p>
 
 		<h3>
 
