--- a/reports/report5/report5.html
+++ b/reports/report5/report5.html
@@ -215,6 +215,11 @@ cv2.destroyAllWindows()
 
 		<h2> 5. Conclusões e Comentários Finais</h2>
 
+		<p>O laboratório de Processamento de Vídeo enfatizou as técnicas de Subtração de Fundo e Detecção de Movimento. Os experimentos demonstraram que essas abordagens são eficazes na 
+			detecção e rastreamento de objetos em movimento. O estudo proporcionou uma compreensão sólida das técnicas e sua aplicação prática em diversas áreas, como segurança e 
+			interação homem-máquina. Embora desafios adicionais possam surgir em ambientes complexos, a experiência adquirida abre caminho para futuras pesquisas e avanços nesse campo 
+			emocionante do Processamento de Vídeo.</p>
+
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
 	<script>
