--- a/reports/report5/report5.html
+++ b/reports/report5/report5.html
@@ -198,7 +198,9 @@ cv2.destroyAllWindows()
 
 		<h3> 2 - Detecção de movimento na camera </h3>
 		<h4>Fernando S.</h4>
-
+	    <video width="480" controls>
+                <source src="media/fernando.mp4" type="video/mp4">
+            </video> 
 		<h4>Fernando A.</h4>
 		
 		<h4>Leonardo</h4>
