--- a/reports/report5/report5.html
+++ b/reports/report5/report5.html
@@ -203,6 +203,9 @@ cv2.destroyAllWindows()
             </video> 
 			
 		<h4>Fernando A.</h4>
+	<video width="480" controls>
+                <source src="media/fernandoa.mp4" type="video/mp4">
+            </video> 
 		
 		<h4>Leonardo</h4>
             <video width="480" controls>
