--- a/reports/report6/report6.html
+++ b/reports/report6/report6.html
@@ -1,1 +1,59 @@
+<html>
+	<head>
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
+
+	</head>
+
+	<body>
+		<h1> Relatório lab 6 </h1>
+
+		<h2> Grupo </h2>
+
+		<p>Leonardo Di Credico </p>
+
+		<p>Anthony Hlebania</p>
+
+		<p>Fernando Hiroaki Suzuki</p>
+
+		<p>Fernando Astolfo Dos Santos</p>
+		
+		<h2> 1.Introdução </h2>
+		
+		<h2> 2.Fundamentos Básicos</h2>
+
+		<h3>
+
+		<h2> 3.Materiais e Métodos</h2>
+
+		<h3>1. Ambiente dos experimentos</h3>
+
+		<p>a) Sistema Operacional:</p>
+		<p>- Ubuntu (versão 20.22)</p>
+
+		<p>b) Equipamentos:</p>
+		<p>- Computador com webcam integrada</p>
+		<p>- Monitor de exibição</p>
+
+		<h3>2. Programas e Bibliotecas utilizadas</h3>
+
+		<p>a) Programas:</p>
+		<p>- Python: Linguagem de programação utilizada para desenvolver os programas.</p>
+		
+		<p>b) Bibliotecas:</p>
+		<p>- OpenCV (versão 4.7.0): Biblioteca principal para manipulação de imagens e vídeos.</p>
+		<p>- NumPy (versão 1.21.5): Biblioteca para operações numéricas e processamento de arrays.</p>
+		<p>- Matplotlib (versão 3.7.2): Biblioteca para plotagem de gráficos.</p>
+
+		<h3>3. Código Fonte</h3>
+
+		<h2> 4.Resultados e Análises</h2>
+		
+		<h2> 5. Conclusões e Comentários Finais</h2>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
+	<script>
+		hljs.highlightAll();
+	</script>
+	</body>
+</html>
