--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 			<a href=reports/report3/report3.html> Relatório Lab 3</a> <br>
 			<a href=reports/report4/report4.html> Relatório Lab 4</a> <br>
 			<a href=reports/report5/report5.html> Relatório Lab 5</a> <br>
+			<a href=reports/report6/report6.html> Relatório Lab 6</a> <br>
+
 
 
 
