--- a/reports/report6/report6.html
+++ b/reports/report6/report6.html
@@ -19,6 +19,18 @@
 		<p>Fernando Astolfo Dos Santos</p>
 		
 		<h2> 1.Introdução </h2>
+
+		<p>Features são pontos distintivos em imagens ou quadros de vídeo, essenciais para tarefas de visão computacional. Nesta aula, estudamos três métodos de 
+			detecção de Features: Harris Corner Detection, Shi-Tomasi Corner Detector e Scale-Invariant Feature Transform (SIFT).</p>
+
+		<p>O material de estudo incluiu teoria sobre Features e tutoriais para implementar os exercícios práticos em Python utilizando a biblioteca OpenCV. 
+			Foram realizados experimentos de detecção de Features em imagens salvas anteriormente, bem como imagens da webcam. Os resultados foram analisados 
+			para cada método de detecção e diferentes cenários, incluindo rostos de integrantes do grupo e um tabuleiro de xadrez preto e branco.</p>
+		
+		<p>O objetivo deste relatório é compreender a importância das Features no processamento de vídeo, avaliar a eficácia dos métodos de detecção e explorar 
+			suas aplicações em diversas situações. As informações e conclusões obtidas serão fundamentais para o desenvolvimento de sistemas de processamento 
+			de vídeo mais eficientes e versáteis.</p>
+</p>
 		
 		<h2> 2.Fundamentos Básicos</h2>
 
