--- a/reports/report6/report6.html
+++ b/reports/report6/report6.html
@@ -30,10 +30,25 @@
 		<p>O objetivo deste relatório é compreender a importância das Features no processamento de vídeo, avaliar a eficácia dos métodos de detecção e explorar 
 			suas aplicações em diversas situações. As informações e conclusões obtidas serão fundamentais para o desenvolvimento de sistemas de processamento 
 			de vídeo mais eficientes e versáteis.</p>
-</p>
 		
 		<h2> 2.Fundamentos Básicos</h2>
 
+		<p>Ao estudar as Features, como proposto no laboratório, os conceitos fundamentais da visão computacional e processamento de imagens são colocados em 
+			prática. A compreensão dos princípios de detecção de cantos e pontos distintivos, como os abordados nos exercícios do laboratório, fornece os 
+			blocos de construção para identificar características visuais únicas em uma imagem. Isso é essencial para o reconhecimento de objetos, 
+			rastreamento de movimento e outras aplicações em processamento de vídeo.</p>
+		
+		<p>O primeiro exercício, o "Harris Corner Detection," aborda a detecção de cantos em uma imagem. Ao entender os conceitos de gradiente de intensidade e 
+			matriz de covariância, os estudantes aprendem como identificar pontos de interesse relevantes para a análise de uma cena.</p>
+		
+		<p>O segundo exercício, o "Shi-Tomasi Corner Detector & Good Features to Track," explora uma abordagem ligeiramente diferente para a detecção de cantos, 
+			focando em selecionar os melhores pontos de interesse para o rastreamento em sequências de vídeo. Esse método é útil para aplicações de visão 
+			computacional, como rastreamento de objetos em movimento.</p>
+		
+		<p>O terceiro exercício, a "Introduction to SIFT (Scale-Invariant Feature Transform)," apresenta um método avançado de detecção de pontos distintivos 
+			invariantes à escala. Ao aprender sobre o conceito de pontos-chave e descritores, os estudantes adquirem uma compreensão mais aprofundada das 
+			características invariantes e sua importância para a robustez dos algoritmos de visão computacional.</p>
+		
 		<h3>
 
 		<h2> 3.Materiais e Métodos</h2>
