--- a/reports/report6/report6.html
+++ b/reports/report6/report6.html
@@ -77,6 +77,16 @@
 		
 		<h2> 5. Conclusões e Comentários Finais</h2>
 
+		<p>O laboratório de Processamento de Vídeo sobre Features proporcionou uma compreensão sólida dos conceitos fundamentais de detecção de características 
+			visuais. Através do estudo teórico e da aplicação prática dos algoritmos, aprendemos a identificar cantos, pontos distintivos e características 
+			invariantes à escala em imagens e vídeos.</p>
+			
+		<p>Os Fundamentos Básicos desempenharam um papel crucial nesse processo, fornecendo a base necessária para explorar técnicas mais avançadas e desenvolver 
+			habilidades em visão computacional. Através dos experimentos, pudemos avaliar a eficácia dos métodos de detecção e suas aplicações práticas.</p>
+			
+		<p>Olhando para o futuro, reconhecemos a importância contínua de aprofundar nosso conhecimento em Features e seus fundamentos. Isso nos permitirá 
+			explorar novas tecnologias, como o Deep Learning.</p>
+		
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
 	<script>
 		hljs.highlightAll();
