--- a/reports/report6/report6.html
+++ b/reports/report6/report6.html
@@ -73,6 +73,46 @@
 
 		<h3>3. Código Fonte</h3>
 
+		<h4> 1 - Deteção de Features pelo método Harris Corner Detection. </h4>
+
+        <p>Este código utiliza a biblioteca OpenCV (cv2) para detectar cantos em uma imagem usando o algoritmo de Harris Corner 
+		Detection. A detecção é feita em uma imagem 'img2.jpg' que é convertida para escala de cinza. Os cantos são 
+		marcados em vermelho na imagem original, e o resultado é exibido em uma janela. O usuário pode fechar a janela 
+		pressionando a tecla 'ESC', e a imagem resultante é salva em um arquivo.
+			<pre><code class="python">
+import numpy as np
+import cv2 as cv
+
+filename = 'img2.jpg'
+
+img = cv.imread(filename)
+gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)
+gray = np.float32(gray)
+dst = cv.cornerHarris(gray, 2, 3, 0.04)
+
+# result is dilated for marking the corners, not important
+dst = cv.dilate(dst, None)
+
+# Threshold for an optimal value, it may vary depending on the image.
+img[dst > 0.01 * dst.max()] = [0, 0, 255]
+
+# Create a named window and resize it
+cv.namedWindow('dst', cv.WINDOW_NORMAL)
+cv.resizeWindow('dst', 600, 1200)  # Change the size to your preferred dimensions
+
+cv.imshow('dst', img)
+
+cv.imwrite('img2_harris.jpg',img)
+
+
+if cv.waitKey(0) & 0xff == 27:
+    cv.destroyAllWindows()
+
+			</code></pre>
+		</p>
+
+			
+
 		<h2> 4.Resultados e Análises</h2>
 		
 		<h2> 5. Conclusões e Comentários Finais</h2>
