--- a/reports/report6/report6.html
+++ b/reports/report6/report6.html
@@ -111,7 +111,30 @@ if cv.waitKey(0) & 0xff == 27:
 			</code></pre>
 		</p>
 
-			
+		<h4> 1 - Deteção de Features pelo método  Shi-Tomasi Corner Detector & Good Features to Track. </h4>
+
+        <p>Neste código, o OpenCV é usado para detectar cantos em uma imagem ('img2.jpg') usando o algoritmo Shi-Tomasi. Os 
+		cantos são marcados na imagem original com círculos vermelhos e, em seguida, a imagem resultante é exibida em 
+		uma janela gráfica.
+			<pre><code class="python">
+import numpy as np
+import cv2 as cv
+from matplotlib import pyplot as plt
+
+img = cv.imread('img2.jpg')
+gray = cv.cvtColor(img,cv.COLOR_BGR2GRAY)
+
+corners = cv.goodFeaturesToTrack(gray,25,0.01,10)
+corners = np.int0(corners)
+
+for i in corners:
+ x,y = i.ravel()
+ cv.circle(img,(x,y),3,255,-1)
+ 
+plt.imshow(img),plt.show()
+
+			</code></pre>
+		</p>
 
 		<h2> 4.Resultados e Análises</h2>
 		
