--- a/reports/report6/report6.html
+++ b/reports/report6/report6.html
@@ -73,7 +73,7 @@
 
 		<h3>3. Código Fonte</h3>
 
-		<h4> 1 - Deteção de Features pelo método Harris Corner Detection. </h4>
+		<h4> 1.1 Deteção de Features pelo método Harris Corner Detection. </h4>
 
         <p>Este código utiliza a biblioteca OpenCV (cv2) para detectar cantos em uma imagem usando o algoritmo de Harris Corner 
 		Detection. A detecção é feita em uma imagem 'img2.jpg' que é convertida para escala de cinza. Os cantos são 
@@ -111,7 +111,7 @@ if cv.waitKey(0) & 0xff == 27:
 			</code></pre>
 		</p>
 
-		<h4> 1 - Deteção de Features pelo método  Shi-Tomasi Corner Detector & Good Features to Track. </h4>
+		<h4> 1.2 Deteção de Features pelo método  Shi-Tomasi Corner Detector & Good Features to Track. </h4>
 
         <p>Neste código, o OpenCV é usado para detectar cantos em uma imagem ('img2.jpg') usando o algoritmo Shi-Tomasi. Os 
 		cantos são marcados na imagem original com círculos vermelhos e, em seguida, a imagem resultante é exibida em 
@@ -136,6 +136,30 @@ plt.imshow(img),plt.show()
 			</code></pre>
 		</p>
 
+		<h4> 1.3 Deteção de Features pelo método  Introduction to SIFT (Scale-Invariant Feature Transform). </h4>
+
+        <p>Este código utiliza o OpenCV (cv2) para aplicar o algoritmo SIFT (Scale-Invariant Feature Transform) em uma imagem e, 
+		em seguida, desenha os keypoints (pontos de interesse) encontrados na imagem original. A imagem resultante, com 
+		os keypoints marcados, é salva como 'img2_sift.jpg'. O algoritmo SIFT é frequentemente usado para encontrar 
+		pontos de interesse robustos em imagens, que podem ser usados em tarefas como correspondência de imagens e 
+		reconhecimento de objetos.
+			<pre><code class="python">
+import numpy as np
+import cv2 as cv
+
+img = cv.imread('img2.jpg')
+gray= cv.cvtColor(img,cv.COLOR_BGR2GRAY)
+
+sift = cv.SIFT_create()
+kp = sift.detect(gray,None)
+
+img=cv.drawKeypoints(gray,kp,img)
+
+cv.imwrite('img2_sift.jpg',img)
+
+			</code></pre>
+		</p>
+			
 		<h2> 4.Resultados e Análises</h2>
 		
 		<h2> 5. Conclusões e Comentários Finais</h2>
