--- a/reports/report6/report6.html
+++ b/reports/report6/report6.html
@@ -313,6 +313,29 @@ cv.destroyAllWindows()
 		</p>
 		
 		<h2> 4.Resultados e Análises</h2>
+
+		<h3> Deteção de Features </h3>
+
+		<p>Imagem Original:</p>
+
+		<figure>
+			<img src="1/img1.jpg" height="480"/>
+			<figcaption>Original</figcaption>
+	    	</figure>
+			
+        <h4> Harris Corner Detection </h4>
+            
+            <figure>
+		<img src="1/img1_harris.jpg" height="480"/>
+		<figcaption>Original</figcaption>
+	    </figure>
+
+	<h4> Shi-Tomasi Corner Detector & Good Features to Track </h4>
+            
+            <figure>
+		<img src="1/img1_shi_tomasi.jpg" height="480"/>
+		<figcaption>Original</figcaption>
+	    </figure>
 		
 		<h2> 5. Conclusões e Comentários Finais</h2>
 
