--- a/reports/report6/report6.html
+++ b/reports/report6/report6.html
@@ -316,10 +316,20 @@ cv.destroyAllWindows()
 
 		<h3> Deteção de Features </h3>
 
-		<p>Imagem Original:</p>
+		<p>Imagens Originais:</p>
 
 		<figure>
 			<img src="1/img1.jpg" height="480"/>
+			<figcaption>Original</figcaption>
+	    	</figure>
+
+		<figure>
+			<img src="1/img2.jpg" height="480"/>
+			<figcaption>Original</figcaption>
+	    	</figure>
+
+		<figure>
+			<img src="1/img3.jpg" height="480"/>
 			<figcaption>Original</figcaption>
 	    	</figure>
 			
@@ -330,13 +340,50 @@ cv.destroyAllWindows()
 		<figcaption>Original</figcaption>
 	    </figure>
 
+	    <figure>
+		<img src="1/img2_harris.jpg" height="480"/>
+		<figcaption>Original</figcaption>
+	    </figure>
+
+	    <figure>
+		<img src="1/img3_harris.jpg" height="480"/>
+		<figcaption>Original</figcaption>
+	    </figure>
+
 	<h4> Shi-Tomasi Corner Detector & Good Features to Track </h4>
             
             <figure>
 		<img src="1/img1_shi_tomasi.jpg" height="480"/>
 		<figcaption>Original</figcaption>
 	    </figure>
-		
+
+	    <figure>
+		<img src="1/img2_shi_tomasi.jpg" height="480"/>
+		<figcaption>Original</figcaption>
+	    </figure>
+			
+	    <figure>
+		<img src="1/img3_shi_tomasi.jpg" height="480"/>
+		<figcaption>Original</figcaption>
+	    </figure>
+
+	<h4> Introduction to SIFT (Scale-Invariant Feature Transform) </h4>
+            
+            <figure>
+		<img src="1/img1_sift.jpg" height="480"/>
+		<figcaption>Original</figcaption>
+	    </figure>
+
+	    <figure>
+		<img src="1/img2_sift.jpg" height="480"/>
+		<figcaption>Original</figcaption>
+	    </figure>
+
+	    <figure>
+		<img src="1/img3_sift.jpg" height="480"/>
+		<figcaption>Original</figcaption>
+	    </figure>
+			
 		<h2> 5. Conclusões e Comentários Finais</h2>
 
 		<p>O laboratório de Processamento de Vídeo sobre Features proporcionou uma compreensão sólida dos conceitos fundamentais de detecção de características 
