--- a/reports/report6/report6.html
+++ b/reports/report6/report6.html
@@ -332,6 +332,11 @@ cv.destroyAllWindows()
 			<img src="1/img3.jpg" height="480"/>
 			<figcaption>Original</figcaption>
 	    	</figure>
+
+		<figure>
+			<img src="1/img4.jpg" height="480"/>
+			<figcaption>Original</figcaption>
+	    	</figure>
 			
         <h4> Harris Corner Detection </h4>
             
@@ -347,6 +352,11 @@ cv.destroyAllWindows()
 
 	    <figure>
 		<img src="1/img3_harris.jpg" height="480"/>
+		<figcaption>Original</figcaption>
+	    </figure>
+
+	    <figure>
+		<img src="1/img4_harris.jpg" height="480"/>
 		<figcaption>Original</figcaption>
 	    </figure>
 
@@ -367,6 +377,11 @@ cv.destroyAllWindows()
 		<figcaption>Original</figcaption>
 	    </figure>
 
+	    <figure>
+		<img src="1/img4_shi_tomasi.jpg" height="480"/>
+		<figcaption>Original</figcaption>
+	    </figure>
+
 	<h4> Introduction to SIFT (Scale-Invariant Feature Transform) </h4>
             
             <figure>
@@ -381,6 +396,11 @@ cv.destroyAllWindows()
 
 	    <figure>
 		<img src="1/img3_sift.jpg" height="480"/>
+		<figcaption>Original</figcaption>
+	    </figure>
+
+	    <figure>
+		<img src="1/img4_sift.jpg" height="480"/>
 		<figcaption>Original</figcaption>
 	    </figure>
 			
