--- a/reports/report6/report6.html
+++ b/reports/report6/report6.html
@@ -314,9 +314,9 @@ cv.destroyAllWindows()
 		
 		<h2> 4.Resultados e Análises</h2>
 
-		<h3> Deteção de Features </h3>
+		<h3> 1. Deteção de Features </h3>
 
-		<p>Imagens Originais:</p>
+	<h4> Imagens Originais: </h4>
 
 		<figure>
 			<img src="1/img1.jpg" height="480"/>
@@ -403,6 +403,60 @@ cv.destroyAllWindows()
 		<img src="1/img4_sift.jpg" height="480"/>
 		<figcaption>Original</figcaption>
 	    </figure>
+
+		<h3> 2. Deteção de Features pela leitura da webcam</h3>
+
+	<h4> Harris Corner Detection </h4>
+			
+		<figure>
+			<img src="2/fernandoa_harris.jpg" height="480"/>
+			<figcaption>Original</figcaption>
+	    	</figure>
+
+		<figure>
+			<img src="2/fernandos_harris.jpg" height="480"/>
+			<figcaption>Original</figcaption>
+	    	</figure>
+
+		<figure>
+			<img src="2/leonardo_harris.jpg" height="480"/>
+			<figcaption>Original</figcaption>
+	    	</figure>
+
+	<h4> Shi-Tomasi Corner Detector & Good Features to Track </h4>
+			
+		<figure>
+			<img src="2/fernandoa_shi_tomasi.jpg" height="480"/>
+			<figcaption>Original</figcaption>
+	    	</figure>
+
+		<figure>
+			<img src="2/fernandos_shi_tomasi.jpg" height="480"/>
+			<figcaption>Original</figcaption>
+	    	</figure>
+
+		<figure>
+			<img src="2/leonardo_shi_tomasi.jpg" height="480"/>
+			<figcaption>Original</figcaption>
+	    	</figure>
+
+	<h4> Introduction to SIFT (Scale-Invariant Feature Transform) </h4>
+			
+		<figure>
+			<img src="2/fernandoa_sift.jpg" height="480"/>
+			<figcaption>Original</figcaption>
+	    	</figure>
+
+		<figure>
+			<img src="2/fernandos_sift.jpg" height="480"/>
+			<figcaption>Original</figcaption>
+	    	</figure>
+
+		<figure>
+			<img src="2/leonardo_sift.jpg" height="480"/>
+			<figcaption>Original</figcaption>
+	    	</figure>
+
 			
 		<h2> 5. Conclusões e Comentários Finais</h2>
 
