--- a/reports/report6/report6.html
+++ b/reports/report6/report6.html
@@ -331,7 +331,7 @@ cv.destroyAllWindows()
 	    	</figure>
 
 		<figure>
-			<img src="src/1/img4.jpg" height="480"/>
+			<img src="src/1/img4.png" height="480"/>
 	    	</figure>
 			
         <h4> Harris Corner Detection </h4>
@@ -355,19 +355,19 @@ cv.destroyAllWindows()
 	<h4> Shi-Tomasi Corner Detector & Good Features to Track </h4>
             
             <figure>
-		<img src="src/1/img1_shi_tomasi.jpg" height="480"/>
+		<img src="src/1/img1_shi_tomasi.png" height="480"/>
 	    </figure>
 
 	    <figure>
-		<img src="src/1/img2_shi_tomasi.jpg" height="480"/>
+		<img src="src/1/img2_shi_tomasi.png" height="480"/>
 	    </figure>
 			
 	    <figure>
-		<img src="src/1/img3_shi_tomasi.jpg" height="480"/>
+		<img src="src/1/img3_shi_tomasi.png" height="480"/>
 	    </figure>
 
 	    <figure>
-		<img src="src/1/img4_shi_tomasi.jpg" height="480"/>
+		<img src="src/1/img4_shi_tomasi.png" height="480"/>
 	    </figure>
 
 	<h4> Introduction to SIFT (Scale-Invariant Feature Transform) </h4>
@@ -407,7 +407,7 @@ cv.destroyAllWindows()
 	<h4> Shi-Tomasi Corner Detector & Good Features to Track </h4>
 			
 		<figure>
-			<img src="src/2/fernandoa_shi_tomasi.jpg" height="480"/>
+			<img src="src/2/fernandoa_shi_tomasi.png" height="480"/>
 	    	</figure>
 
 		<figure>
