--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<h2>Pasta do Projeto</h2>
 			<a href=project/context/application_context.html> Contexto</a> <br>
 			<a href=project/plan/plan.html> Modelagem Funcional</a> <br>
-			<a href=project/plan/plan.html> Aplicação do SPV e Questionário Avaliativo</a> <br>
+			<a href=project/parte4/SPV_application_quiz.html> Aplicação do SPV e Questionário Avaliativo</a> <br>
 			
 
 			<br>
