--- a/project/parte4/SPV_application_quiz.html
+++ b/project/parte4/SPV_application_quiz.html
@@ -8,9 +8,9 @@
 
 			    <p>Prezado(a) jogador(a) de Magic: The Gathering,
 			
-			    <p>Seu feedback é essencial! Este questionário avaliativo visa melhorar o programa de reconhecimento de cartas utilizado nas 
-			       partidas online do jogo. Sua opinião nos ajudará a aprimorar a efetividade e a usabilidade do sistema, garantindo uma 
-			       experiência mais satisfatória para todos os jogadores.</p>
+			    <p>Seu feedback é essencial! Este questionário avaliativo visa melhorar o programa de reconhecimento 
+			       de cartas utilizado nas partidas online do jogo. Sua opinião nos ajudará a aprimorar a efetividade 
+			       e a usabilidade do sistema, garantindo uma experiência mais satisfatória para todos os jogadores.</p>
 			
 			    <p>Agradecemos por dedicar seu tempo a contribuir com nosso projeto!</p>
 			
