--- a/project/parte4/SPV_application_quiz.html
+++ b/project/parte4/SPV_application_quiz.html
@@ -4,19 +4,55 @@
 
 	  	<h1>Questionário Avaliativo (AQA)</h1>
 
-		    <h2>Introdução</h2>
+			<h2>Introdução</h2>
 
 			    <p>Prezado(a) jogador(a) de Magic: The Gathering,
 			
 			    <p>Seu feedback é essencial! Este questionário avaliativo visa melhorar o programa de reconhecimento 
-			       de cartas utilizado nas partidas online do jogo. Sua opinião nos ajudará a aprimorar a efetividade 
+				de cartas utilizado nas partidas online do jogo. Sua opinião nos ajudará a aprimorar a efetividade 
 			       e a usabilidade do sistema, garantindo uma experiência mais satisfatória para todos os jogadores.</p>
-			
-			    <p>Agradecemos por dedicar seu tempo a contribuir com nosso projeto!</p>
 			
 			    <p>Atenciosamente,</p>
 			    
 			    <p>Equipe de Processamento de Vídeo, Crakehall Boars.</p>
+
+			<h2>Avaliação do reconhecimento de cartas</h2>
+
+				<p>1. Ao utilizar o programa de reconhecimento de cartas, você considerou que ele identificou as 
+				cartas de forma precisa e satisfatória?</p>
+
+			<h2>Usabilidade do programa</h2>
+
+				<p>2. Como você classificaria a facilidade de uso do programa de reconhecimento de cartas?</p>
+
+				<p>3. O programa é intuitivo o suficiente para você entender como utilizá-lo corretamente?</p>
+
+			<h2>Desempenho</h2>
+
+				<p>4. O tempo de reconhecimento das cartas foi satisfatório? Ou seja, o programa identifica as 
+					cartas rapidamente?</p>
+
+				<p>5. O programa teve alguma dificuldade em reconhecer cartas específicas ou situações de 
+					jogo?</p>
+
+			<h2>Satisfação geral</h2>
+
+				<p>6. Considerando sua experiência geral com o programa de reconhecimento de cartas, você está 
+					satisfeito com o seu desempenho e funcionalidade?</p>
+
+			<h2>Feedback adicional</h2>
+
+				<p>7. Por favor, forneça qualquer feedback adicional sobre o programa de reconhecimento de cartas 
+					que possa ajudar a equipe a melhorá-lo.</p>
+
+			<h2>Encerramento</h2>
+
+				<p>Agradecemos sinceramente por participar do nosso questionário avaliativo! Sua colaboração é 
+					fundamental para o aprimoramento do programa de reconhecimento de cartas em Magic: The 
+					Gathering. Com suas respostas, poderemos aperfeiçoar a experiência dos jogadores e 
+					proporcionar partidas ainda mais envolventes e divertidas. Valorizamos imensamente sua 
+					contribuição e dedicação. Muito obrigado(a)!</p>
+	
     
 	</body>
 </html>
