--- a/project/parte4/SPV_application_quiz.html
+++ b/project/parte4/SPV_application_quiz.html
@@ -2,6 +2,17 @@
 	<body>
 		<h1>Elaboração de Aplicação do SPV</h1>
 
+
+		<h1>Instruções</h1>
+		<ol>   
+			<li>Monte o setup com o suporte de camera, caso já não esteja montado</li>
+			<li>Inicie a aplicação com o comando ./run.sh na raiz do projeto </li> 
+			<li>Insira uma carta no campo de visão da camera </li> 
+			<li>Clique em cima da carta que queira identificar </li> 
+			<li>Ela deve aparecer recortada a direita, ao lado de uma carta de referencia e o tempo do processo de identificação </li> 
+		</ol>
+
+
 	  	<h1>Questionário Avaliativo (AQA)</h1>
 
 			<h2>Introdução</h2>
