Added more questions

--- a/project/parte4/SPV_application_quiz.html
+++ b/project/parte4/SPV_application_quiz.html
@@ -49,12 +49,19 @@
 			<h2>Satisfação geral</h2>
 
 				<p>6. Considerando sua experiência geral com o programa de reconhecimento de cartas, você está 
-					satisfeito com o seu desempenho e funcionalidade?</p>
+					satisfeito com o seu desempenho e funcionalidade?
+					7. O que quão resiliente o programa é a interferencia visual? Reflexos, sombra ou outros fatores
+					</p>
+
+			<h2>Funcionalidades especificas</h2>
+				<p>8. Em um cenário com multiplas cartas, o programa é capaz de recortar apenas a carta que voce clicou?
+				</p>
 
 			<h2>Feedback adicional</h2>
 
-				<p>7. Por favor, forneça qualquer feedback adicional sobre o programa de reconhecimento de cartas 
+				<p>9. Por favor, forneça qualquer feedback adicional sobre o programa de reconhecimento de cartas 
 					que possa ajudar a equipe a melhorá-lo.</p>
+					
 
 			<h2>Encerramento</h2>
 
