--- a/project/parte4/SPV_application_quiz.html
+++ b/project/parte4/SPV_application_quiz.html
@@ -49,9 +49,9 @@
 			<h2>Satisfação geral</h2>
 
 				<p>6. Considerando sua experiência geral com o programa de reconhecimento de cartas, você está 
-					satisfeito com o seu desempenho e funcionalidade?
-					7. O que quão resiliente o programa é a interferencia visual? Reflexos, sombra ou outros fatores
-					</p>
+					satisfeito com o seu desempenho e funcionalidade?</p>
+				<p>7. O que quão resiliente o programa é a interferencia visual? Reflexos, sombra ou outros 
+					fatores</p>
 
 			<h2>Funcionalidades especificas</h2>
 				<p>8. Em um cenário com multiplas cartas, o programa é capaz de recortar apenas a carta que voce clicou?
