--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			<a href=reports/report4/report4.html> Relatório Lab 4</a> <br>
 			<a href=reports/report5/report5.html> Relatório Lab 5</a> <br>
 			<a href=reports/report6/report6.html> Relatório Lab 6</a> <br>
+			<a href=reports/report7/report7.html> Relatório Lab 7</a> <br>
 
 
 
