--- a/reports/report7/report7.html
+++ b/reports/report7/report7.html
@@ -20,34 +20,51 @@
 		
 		<h2> 1.Introdução </h2>
 
-		<p>Features são pontos distintivos em imagens ou quadros de vídeo, essenciais para tarefas de visão computacional. Nesta aula, estudamos três métodos de 
-			detecção de Features: Harris Corner Detection, Shi-Tomasi Corner Detector e Scale-Invariant Feature Transform (SIFT).</p>
+		<p>O presente relatório descreve o laboratório realizado na disciplina de Processamento de Vídeo, com foco 
+			na detecção de objetos utilizando a técnica de Cascade Classifier. A detecção de objetos é uma 
+			área fundamental da visão computacional, com aplicações abrangentes em diversos setores, desde a 
+			segurança até a automação industrial.</p>
 
-		<p>O material de estudo incluiu teoria sobre Features e tutoriais para implementar os exercícios práticos em Python utilizando a biblioteca OpenCV. 
-			Foram realizados experimentos de detecção de Features em imagens salvas anteriormente, bem como imagens da webcam. Os resultados foram analisados 
-			para cada método de detecção e diferentes cenários, incluindo rostos de integrantes do grupo e um tabuleiro de xadrez preto e branco.</p>
+		<p>Ao longo do laboratório, foram estudados conceitos teóricos essenciais sobre detecção de objetos com o 
+			Cascade Classifier, compreendendo a teoria por trás do funcionamento dessa técnica e sua 
+			implementação prática. Além disso, foram explorados arquivos XML contendo modelos pré-treinados 
+			para a detecção de objetos comuns, como rostos, olhos e sorrisos.</p>
 		
-		<p>O objetivo deste relatório é compreender a importância das Features no processamento de vídeo, avaliar a eficácia dos métodos de detecção e explorar 
-			suas aplicações em diversas situações. As informações e conclusões obtidas serão fundamentais para o desenvolvimento de sistemas de processamento 
-			de vídeo mais eficientes e versáteis.</p>
+		<p>Este relatório detalhará o estudo realizado durante o laboratório, descrevendo a teoria do Cascade Classifier,
+			os passos de implementação dos programas e os resultados alcançados. Também serão apresentadas as 
+			conclusões e considerações sobre o desempenho e as aplicações práticas da detecção de objetos por meio 
+			dessa técnica.</p>
 		
 		<h2> 2.Fundamentos Básicos</h2>
 
-		<p>Ao estudar as Features, como proposto no laboratório, os conceitos fundamentais da visão computacional e processamento de imagens são colocados em 
-			prática. A compreensão dos princípios de detecção de cantos e pontos distintivos, como os abordados nos exercícios do laboratório, fornece os 
-			blocos de construção para identificar características visuais únicas em uma imagem. Isso é essencial para o reconhecimento de objetos, 
-			rastreamento de movimento e outras aplicações em processamento de vídeo.</p>
+		<p>A detecção de objetos é uma das principais tarefas na área de visão computacional. Trata-se de 
+			identificar a presença e a localização de objetos específicos dentro de uma imagem ou sequência 
+			de vídeo. Essa tarefa é fundamental em muitos campos, como reconhecimento facial, monitoramento 
+			de segurança, condução autônoma, entre outros. O Cascade Classifier é uma abordagem eficiente para 
+			a detecção de objetos em tempo real, especialmente quando se trata de objetos com características 
+			bem definidas, como rostos humanos. A técnica se baseia em classificadores em cascata, que são 
+			organizados hierarquicamente e empregam recursos de Haar para realizar a detecção de maneira 
+			rápida e precisa.</p>
 		
-		<p>O primeiro exercício, o "Harris Corner Detection," aborda a detecção de cantos em uma imagem. Ao entender os conceitos de gradiente de intensidade e 
-			matriz de covariância, os estudantes aprendem como identificar pontos de interesse relevantes para a análise de uma cena.</p>
+		<p>As características de Haar são elementos retangulares que representam a intensidade de uma região específica 
+			em uma imagem. Elas são calculadas usando a diferença entre a soma de pixels em regiões retangulares 
+			adjacentes. Essas características são eficientes para descrever a variação de intensidade em diferentes
+			partes de um objeto.</p>
 		
-		<p>O segundo exercício, o "Shi-Tomasi Corner Detector & Good Features to Track," explora uma abordagem ligeiramente diferente para a detecção de cantos, 
-			focando em selecionar os melhores pontos de interesse para o rastreamento em sequências de vídeo. Esse método é útil para aplicações de visão 
-			computacional, como rastreamento de objetos em movimento.</p>
+		<p>O Cascade Classifier consiste em uma sequência de classificadores organizados em cascata, onde cada 
+			estágio é responsável por decidir se uma região da imagem contém ou não o objeto de interesse. 
+			Cada classificador é uma árvore de decisão que utiliza recursos de Haar para realizar a 
+			classificação. A grande vantagem dos classificadores em cascata é que eles podem descartar 
+			rapidamente as regiões que não contêm o objeto, reduzindo drasticamente a quantidade de cálculos 
+			necessários para a detecção. Isso torna a abordagem muito eficiente e adequada para aplicações em 
+			tempo real.</p>
 		
-		<p>O terceiro exercício, a "Introduction to SIFT (Scale-Invariant Feature Transform)," apresenta um método avançado de detecção de pontos distintivos 
-			invariantes à escala. Ao aprender sobre o conceito de pontos-chave e descritores, os estudantes adquirem uma compreensão mais aprofundada das 
-			características invariantes e sua importância para a robustez dos algoritmos de visão computacional.</p>
+		<p>Uma das principais vantagens do Cascade Classifier é a disponibilidade de modelos pré-treinados para a 
+			detecção de objetos comuns, como rostos, olhos, sorrisos, entre outros. Esses modelos são arquivos 
+			XML que contêm as informações necessárias para o funcionamento dos classificadores em cascata. Os 
+			modelos pré-treinados permitem que os desenvolvedores utilizem a detecção de objetos em suas 
+			aplicações sem a necessidade de treinar um modelo do zero, economizando tempo e recursos 
+			computacionais.</p>
 		
 		<h3>
 
@@ -73,7 +90,7 @@
 
 		<h3>3. Código Fonte</h3>
 
-		<h4> 1.1 Deteção de Features pelo método Harris Corner Detection. </h4>
+		<h4> 1.1 Deteção de objetos utilizando o modelo Haarcascade Frontal Face. </h4>
 
         <p>Este código utiliza a biblioteca OpenCV (cv2) para detectar cantos em uma imagem usando o algoritmo de Harris Corner 
 		Detection. A detecção é feita em uma imagem 'img2.jpg' que é convertida para escala de cinza. Os cantos são 
