--- a/reports/report7/report7.html
+++ b/reports/report7/report7.html
@@ -90,40 +90,43 @@
 
 		<h3>3. Código Fonte</h3>
 
-		<h4> 1.1 Deteção de objetos utilizando o modelo Haarcascade Frontal Face. </h4>
+		<h4> 1.1 Deteção de objetos utilizando o modelo Haarcascade Frontal Face (utilizado nos exercícios). </h4>
 
-        <p>Este código utiliza a biblioteca OpenCV (cv2) para detectar cantos em uma imagem usando o algoritmo de Harris Corner 
-		Detection. A detecção é feita em uma imagem 'img2.jpg' que é convertida para escala de cinza. Os cantos são 
-		marcados em vermelho na imagem original, e o resultado é exibido em uma janela. O usuário pode fechar a janela 
-		pressionando a tecla 'ESC', e a imagem resultante é salva em um arquivo.
+        <p>Este código detecta rostos em uma imagem ('avatares.png') usando o classificador Haar Cascade pré-treinado do 
+		OpenCV. Ele desenha retângulos ao redor das faces detectadas e exibe a imagem resultante em uma janela 
+		chamada "Faces Detection". Se pressionar a tecla 's', a imagem com os retângulos é salva no diretório. 
+		Pressionar a tecla 'Esc' fecha todas as janelas.
 			<pre><code class="python">
-import numpy as np
-import cv2 as cv
+import cv2 
+import numpy as np 
+import common #some useful opencv functions
 
-filename = 'img2.jpg'
+test_image = cv2.imread('avatares.png')
+grey = cv2.cvtColor(test_image, cv2.COLOR_BGR2GRAY)
 
-img = cv.imread(filename)
-gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)
-gray = np.float32(gray)
-dst = cv.cornerHarris(gray, 2, 3, 0.04)
+# Carrega a cascade treinada e na imagem cinza aplica Detecção de FACES:
+face_cascade = cv2.CascadeClassifier('haarcascade_frontalface_default.xml')
+faces = face_cascade.detectMultiScale(grey, 1.3, 5)
 
-# result is dilated for marking the corners, not important
-dst = cv.dilate(dst, None)
+# na imagem de entrada desenha retangulos nos pontos detectados
+for (x,y,w,h) in faces:
+     cv2.rectangle(test_image,(x,y),(x+w,y+h),(255,0,0),2)
 
-# Threshold for an optimal value, it may vary depending on the image.
-img[dst > 0.01 * dst.max()] = [0, 0, 255]
-
-# Create a named window and resize it
-cv.namedWindow('dst', cv.WINDOW_NORMAL)
-cv.resizeWindow('dst', 600, 1200)  # Change the size to your preferred dimensions
-
-cv.imshow('dst', img)
-
-cv.imwrite('img2_harris.jpg',img)
+# Definir nome da janela para re-dimensionar a janela
+height, width, ch = test_image.shape
+W2 = int(width/1.5)
+H2 = int(height/1.5)
+cv2.namedWindow("Faces Detection", cv2.WINDOW_NORMAL)
+cv2.resizeWindow("Faces Detection", W2, H2)
+cv2.imshow("Faces Detection", test_image)
 
 
-if cv.waitKey(0) & 0xff == 27:
-    cv.destroyAllWindows()
+if cv2.waitKey(0) == ord('s'):       
+    cv2.imwrite('avatares_frontalface.png', test_image)
+    cv2.destroyAllWindows()
+
+if cv2.waitKey(0) & 0xff == 27:
+ cv2.destroyAllWindows()
 
 			</code></pre>
 		</p>
@@ -331,7 +334,7 @@ cv.destroyAllWindows()
 		
 		<h2> 4.Resultados e Análises</h2>
 
-		<h3> 1. Deteção de Features </h3>
+		<h3> Deteção de objetos utilizando o modelo Haarcascade Frontal Face (utilizado nos exercícios). </h3>
 
 	<h4> Imagens Originais: </h4>
 
