--- a/reports/report7/report7.html
+++ b/reports/report7/report7.html
@@ -339,22 +339,14 @@ cv.destroyAllWindows()
 	<h4> Imagens Originais: </h4>
 
 		<figure>
-			<img src="src/1/img1.jpg" height="480"/>
+			<img src="src/1/grupo.png" height="480"/>
 	    	</figure>
 
 		<figure>
-			<img src="src/1/img2.jpg" height="480"/>
-	    	</figure>
-
-		<figure>
-			<img src="src/1/img3.jpg" height="480"/>
-	    	</figure>
-
-		<figure>
-			<img src="src/1/img4.png" height="480"/>
+			<img src="src/1/avatares.png" height="480"/>
 	    	</figure>
 			
-        <h4> Harris Corner Detection </h4>
+        <h4> Haarcascade Frontal Face </h4>
             
             <figure>
 		<img src="src/1/img1_harris.jpg" height="480"/>
