--- a/reports/report7/report7.html
+++ b/reports/report7/report7.html
@@ -131,27 +131,43 @@ if cv2.waitKey(0) & 0xff == 27:
 			</code></pre>
 		</p>
 
-		<h4> 1.2 Deteção de Features pelo método  Shi-Tomasi Corner Detector & Good Features to Track. </h4>
+		<h4> 1.2 Deteção de objetos utilizando o modelo Haarcascade Full Body (não utilizado nos exercícios). </h4>
 
-        <p>Neste código, o OpenCV é usado para detectar cantos em uma imagem ('img2.jpg') usando o algoritmo Shi-Tomasi. Os 
-		cantos são marcados na imagem original com círculos vermelhos e, em seguida, a imagem resultante é exibida em 
-		uma janela gráfica.
+        <p>Este código detecta corpos inteiros em uma imagem usando o classificador Haar Cascade pré-
+		treinado do OpenCV. Ele desenha retângulos ao redor dos corpos detectados e exibe a imagem resultante em 
+		uma janela chamada "Full Body Detection". Se pressionar a tecla 's', a imagem com os retângulos é salva no
+		diretório. Pressionar a tecla 'Esc' fecha todas as janelas.
 			<pre><code class="python">
-import numpy as np
-import cv2 as cv
-from matplotlib import pyplot as plt
+import cv2 
+import numpy as np 
+import common #some useful opencv functions
 
-img = cv.imread('img2.jpg')
-gray = cv.cvtColor(img,cv.COLOR_BGR2GRAY)
+test_image = cv2.imread('grupo.png')
+grey = cv2.cvtColor(test_image, cv2.COLOR_BGR2GRAY)
 
-corners = cv.goodFeaturesToTrack(gray,25,0.01,10)
-corners = np.int0(corners)
+# Carrega a cascade treinada e na imagem cinza aplica Detecção de FACES:
+face_cascade = cv2.CascadeClassifier('haarcascade_fullbody.xml')
+faces = face_cascade.detectMultiScale(grey, 1.3, 5)
 
-for i in corners:
- x,y = i.ravel()
- cv.circle(img,(x,y),3,255,-1)
- 
-plt.imshow(img),plt.show()
+# na imagem de entrada desenha retangulos nos pontos detectados
+for (x,y,w,h) in faces:
+     cv2.rectangle(test_image,(x,y),(x+w,y+h),(255,0,0),2)
+
+# Definir nome da janela para re-dimensionar a janela
+height, width, ch = test_image.shape
+W2 = int(width/1.5)
+H2 = int(height/1.5)
+cv2.namedWindow("Full Body Detection", cv2.WINDOW_NORMAL)
+cv2.resizeWindow("Full Body Detection", W2, H2)
+cv2.imshow("Full Body Detection", test_image)
+
+
+if cv2.waitKey(0) == ord('s'):       
+    cv2.imwrite('grupo_fullbody.png', test_image)
+    cv2.destroyAllWindows()
+
+if cv2.waitKey(0) & 0xff == 27:
+ cv2.destroyAllWindows()
 
 			</code></pre>
 		</p>
@@ -353,53 +369,22 @@ cv.destroyAllWindows()
 	    </figure>
 
 	    <figure>
-		<img src="src/1/grupo_frontalface.png" height="480"/>
+		<img src="src/1/avatares_frontalface.png" height="480"/>
 	    </figure>
 
-		<h3> 1.2 Deteção de Features pela leitura da webcam</h3>
+		<h3> 1.2 Deteção de objetos utilizando o modelo Haarcascade Full Body (não utilizado nos exercícios). </h3>
 
-	<h4> Harris Corner Detection </h4>
+	<h4> Haarcascade Full Body </h4>
 			
 		<figure>
-			<img src="src/2/fernandoa_harris.jpg" height="480"/>
+			<img src="src/1/grupo_fullbody.png" height="480"/>
 	    	</figure>
 
 		<figure>
-			<img src="src/2/fernandos_harris.jpg" height="480"/>
+			<img src="src/1/avatares_fullbody.png" height="480"/>
 	    	</figure>
 
-		<figure>
-			<img src="src/2/leonardo_harris.jpg" height="480"/>
-	    	</figure>
-
-	<h4> Shi-Tomasi Corner Detector & Good Features to Track </h4>
 			
-		<figure>
-			<img src="src/2/fernandoa_shi_tomasi.png" height="480"/>
-	    	</figure>
-
-		<figure>
-			<img src="src/2/fernandos_shi_tomasi.jpg" height="480"/>
-	    	</figure>
-
-		<figure>
-			<img src="src/2/leonardo_shi_tomasi.jpg" height="480"/>
-	    	</figure>
-
-	<h4> Introduction to SIFT (Scale-Invariant Feature Transform) </h4>
-			
-		<figure>
-			<img src="src/2/fernandoa_sift.jpg" height="480"/>
-	    	</figure>
-
-		<figure>
-			<img src="src/2/fernandos_sift.jpg" height="480"/>
-	    	</figure>
-
-		<figure>
-			<img src="src/2/leonardo_sift.jpg" height="480"/>
-	    	</figure>
-
 			
 		<h2> 5. Conclusões e Comentários Finais</h2>
 
