--- a/reports/report7/report7.html
+++ b/reports/report7/report7.html
@@ -388,15 +388,20 @@ cv.destroyAllWindows()
 			
 		<h2> 5. Conclusões e Comentários Finais</h2>
 
-		<p>O laboratório de Processamento de Vídeo sobre Features proporcionou uma compreensão sólida dos conceitos fundamentais de detecção de características 
-			visuais. Através do estudo teórico e da aplicação prática dos algoritmos, aprendemos a identificar cantos, pontos distintivos e características 
-			invariantes à escala em imagens e vídeos.</p>
+		<p>O laboratório de detecção de objetos com o Cascade Classifier proporcionou uma visão aprofundada dessa 
+			técnica de visão computacional. Compreendemos os fundamentos teóricos do Cascade Classifier, que 
+			utiliza características de Haar e classificadores em cascata para detecção de objetos em tempo 
+			real.</p>
 			
-		<p>Os Fundamentos Básicos desempenharam um papel crucial nesse processo, fornecendo a base necessária para explorar técnicas mais avançadas e desenvolver 
-			habilidades em visão computacional. Através dos experimentos, pudemos avaliar a eficácia dos métodos de detecção e suas aplicações práticas.</p>
+		<p>Ao realizar os exercícios práticos de detecção de partes do corpo humano, vimos o desempenho e 
+			precisão do Cascade Classifier. O uso de modelos pré-treinados mostrou-se vantajoso, agilizando o 
+			processo de detecção e permitindo aplicação em cenários reais.</p>
 			
-		<p>Olhando para o futuro, reconhecemos a importância contínua de aprofundar nosso conhecimento em Features e seus fundamentos. Isso nos permitirá 
-			explorar novas tecnologias, como o Deep Learning.</p>
+		<p>Embora o Cascade Classifier tenha mostrado melhor eficiência da detecção de faces, reconhecemos que 
+			sua precisão pode ser influenciada por fatores externos. No entanto, esse laboratório foi uma base sólida para 
+			continuarmos a explorar a visão computacional e seus potenciais em futuros projetos e pesquisas.
+			As habilidades adquiridas aqui nos capacitam a enfrentar desafios e buscar soluções inovadoras 
+			nesse campo promissor da ciência da computação.</p>
 		
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
 	<script>
